[gd_scene load_steps=5 format=3 uid="uid://bi2ya3kh7pgba"]

[ext_resource type="Texture2D" uid="uid://oqlie3pucsn5" path="res://scenes/Inventory/item_slot.png" id="1_owwwe"]
[ext_resource type="Script" path="res://scenes/trading/player_display.gd" id="2_17nkc"]
[ext_resource type="FontFile" uid="uid://clv208675ouog" path="res://scenes/Inventory/Arcadepix Plus.ttf" id="2_48l4h"]
[ext_resource type="Texture2D" uid="uid://bq367to2w1qdx" path="res://scenes/trading/Trade Button Transparent.png" id="3_j3omn"]

[node name="Player" type="NinePatchRect"]
offset_left = 3.0
offset_top = 7.0
offset_right = 103.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_owwwe")
patch_margin_left = 3
patch_margin_top = 3
patch_margin_right = 3
patch_margin_bottom = 3
script = ExtResource("2_17nkc")

[node name="player_username" type="Label" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = 3.0
offset_right = 203.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.25, 0.25)
theme_override_colors/font_color = Color(0.423529, 0.247059, 0.121569, 1)
theme_override_colors/font_outline_color = Color(0.925353, 0.925353, 0.925353, 1)
theme_override_constants/line_spacing = 0
theme_override_fonts/font = ExtResource("2_48l4h")
theme_override_font_sizes/font_size = 25
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
justification_flags = 161
visible_characters = 0
visible_ratio = 0.0

[node name="trade_button" type="TextureButton" parent="."]
z_index = 10
layout_mode = 0
offset_left = 85.0
offset_top = 4.0
offset_right = 190.0
offset_bottom = 111.0
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_j3omn")

[connection signal="pressed" from="trade_button" to="." method="_on_trade_button_pressed"]
